# bsv

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  build_rs_cov.profraw  catalog-info.yaml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: bsv.rb
bucket/: bsv.json
scripts/: release.sh  update-packaging.sh
src/: app.rs  cli.rs  docs.rs  entity.rs  graph.rs  lib.rs  main.rs  parser.rs  report.rs  tree.rs  ui.rs  validator.rs  watcher.rs
src/ui/: details.rs  docs.rs  graph.rs  help.rs  mod.rs  theme.rs  tree.rs
testdata/: catalog-info.yaml  docs-catalog.yaml  large-catalog.yaml  validation-test.yaml
testdata/docs/adr/: 0001-use-rust-for-cli.md  0002-entity-tree-structure.md  0003-reference-validation.md
testdata/docs/techdocs/: api-reference.md  architecture.md  getting-started.md  index.md  troubleshooting.md
testdata/subdir/: catalog-info.yaml
tests/: render.rs  watch.rs
