[package]
name = "bsv"
version = "0.2.0"
edition = "2021"
description = "Backstage Entity Visualizer - TUI for exploring catalog-info.yaml files"
license = "MIT"
repository = "https://github.com/yourusername/bsv"
homepage = "https://github.com/yourusername/bsv"
readme = "README.md"
keywords = ["backstage", "tui", "catalog", "devops", "terminal"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Your Name <your@email.com>"]
rust-version = "1.70"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
jsonschema = "0.41"
once_cell = "1.19"

[[bin]]
name = "bsv"
path = "src/main.rs"
